2011-04-13  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Alexey Proskuryakov.

        Media engine fallback doesn't always work
        https://bugs.webkit.org/show_bug.cgi?id=58462

        No new tests, this was verified manually with the url noted in the bug.

        * platform/graphics/MediaPlayer.cpp:
        (WebCore::MediaPlayer::networkStateChanged):


Canonical link: https://commits.webkit.org/73520@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@83763 268f45cc-cd09-0410-ab3c-d52691b4dbfc